# PLCPP

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: PLCChannel.hpp  PLCChip.hpp  PLCChipAsync.hpp  PLCValueChanger.hpp  PLCValueEvent.hpp  PLCValueListener.hpp  PLCValues.hpp
include/builtin/: PLCChip_Add2UInt.hpp
include/builtin/debug/: PLCChip_Print.hpp
src/: PLCChannel.cpp  PLCChip.cpp  PLCChipAsync.cpp  PLCValueChanger.cpp  PLCValueEvent.cpp
src/builtin/: PLCChip_Add2UInt.cpp
src/builtin/debug/: PLCChip_Print.cpp
test/: test.cpp
